test/src/e2e_vm_tests/test_programs/should_fail/match_expressions_ref_mut_not_implemented/src/main.sw
script;

fn main() -> u64 {
    let x = 0u8;
    let _ = match x {
        ref v => {
            v
        },
    };

    let _ = match x {
        mut v => {
            v
        },
    };

    let _ = match x {
        ref mut v => {
            v
        },
    };

    if let ref v = x { };

    if let mut v = x { };

    if let ref mut v = x { };
}
